[project]
name = "third-party"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Chad Upjohn", email = "chad.upjohn@pinnsg.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"third-party" = "third_party:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/third_party"]
